--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -182,8 +182,6 @@
         </div>
 
 
-        
-
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h3 class="section-subheading text-muted">More keynote speakers will be announced ...</h3>
@@ -221,7 +219,10 @@
                     Submissions are strongly recommended to be <b>no more than 4 pages</b>, excluding references or
                     supplementary materials (all in a single pdf). The appropriateness of using additional pages over
                     the recommended length will be judged by reviewers.
-                    All submissions must be in pdf format using the <a href="template/sample-latex.zip" target="_blank"> workshop template</a>.
+                    All submissions must be in pdf format using theAll submissions must be in pdf format using the
+                    workshop template (
+                    <a href="template/sample-latex.zip" target="_blank">latex</a>,
+                    <a href="template/word-template-anonymous.docx" target="_blank">word</a>).
                     Submissions will be managed via the MiLeTS 2020 EasyChair website.
                 </p>
 
@@ -232,6 +233,14 @@
                     description and analysis of a new or open problem that poses a significant challenge to existing
                     techniques, as well as a thorough empirical investigation demonstrating that current methods are
                     insufficient.
+                </p>
+                <p class="large text-muted">
+                    <b> COVID-19 Time Series Analysis Special Track:</b> The COVID-19 pandemic is impacting almost everyone
+                worldwide and is expected to have life-altering short and long-term effects. There are many potential
+                applications of time series analysis and mining that can contribute to understanding of this pandemic.
+                We encourage submission of high quality manuscripts describing original problems, time series datasets,
+                and novel solutions for time series analysis and forecasting of COVID-19. Manuscripts accepted in this
+                special track will be fast-tracked for a journal publication.
                 </p>
 
                 <p class="large text-muted">
@@ -272,7 +281,7 @@
                     <!--</p>-->
                     <p class="large text-muted">
                         <b>Paper Submission Deadline: May 20th, 2020, 11:59PM Alofi
-                        Time
+                            Time </b>
                     </p>
                     <p class="large text-muted">
                         <b>Author Notification:</b> <span>June 15th, 2020</span>
@@ -374,7 +383,6 @@
                 &nbsp;
             </div>
         </div>
-
 
 
     </div>
