Update CFP and template.

--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -239,8 +239,7 @@
                 worldwide and is expected to have life-altering short and long-term effects. There are many potential
                 applications of time series analysis and mining that can contribute to understanding of this pandemic.
                 We encourage submission of high quality manuscripts describing original problems, time series datasets,
-                and novel solutions for time series analysis and forecasting of COVID-19. Manuscripts accepted in this
-                special track will be fast-tracked for a journal publication.
+                and novel solutions for time series analysis and forecasting of COVID-19.
                 </p>
 
                 <p class="large text-muted">
