--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -201,7 +201,7 @@
                     workshop template (
                     <a href="template/sample-latex.zip" target="_blank">latex</a>,
                     <a href="template/word-template-anonymous.docx" target="_blank">word</a>).
-                    Submissions will be managed via the MiLeTS 2020 EasyChair website.
+                    Submissions will be managed via the <a href="https://easychair.org/conferences/?conf=milets2020" target="_blank">MiLeTS 2020 EasyChair website </a>.
                 </p>
 
                 <p class="large text-muted">
