--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -140,23 +140,19 @@
                     <li>Time series pattern mining and detection, representation, searching and indexing,
                         classification, clustering, prediction, forecasting, and rule mining.
                     </li>
-                    <li>BIG time series data.</li>
-                    <li>Hardware acceleration techniques using GPUs, FPGAs and special processors.</li>
-                    <li>Online, high-speed learning and mining from streaming time series.</li>
-                    <li>Uncertain time series mining.</li>
-                    <li>Privacy preserving time series mining and learning.</li>
-                    <li>Time series that are multivariate, high-dimensional, heterogeneous, etc., or that possess other
-                        atypical properties.
-                    </li>
-                    <li>Time series with special structure: spatiotemporal (e.g., wind patterns at different locations),
+                    <li>Time series with special structure: spatiotemporal (e.g., traffic speeds at different locations),
                         relational (e.g., patients with similar diseases), hierarchical, etc.
                     </li>
                     <li>Time series with sparse or irregular sampling, non-random missing values, and special types of
                         measurement noise or bias.
                     </li>
-                    <li>Time series analysis using less traditional approaches, such as deep learning and subspace
-                        clustering.
+                    <li>Time series that are multivariate, high-dimensional, heterogeneous, etc., or that possess other
+                        atypical properties.
                     </li>
+                    <li>Time series analysis using less traditional approaches, such as deep learning and subspace clustering.</li>
+                    <li>Privacy preserving time series mining and learning.</li>
+                    <li>Online, high-speed learning and mining from streaming time series.</li>
+                    <li>Uncertain time series mining.</li>
                     <li>Applications to high impact or relatively new time series domains, such as health and medicine,
                         road traffic, and air quality.
                     </li>
