--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -310,14 +310,21 @@
             </div>
 
             <div class="col-sm-2">
+                <div class="team-member">
+                    <img src="img/sanjay.png" class="img-responsive img-circle" alt="">
+                    <h4><a href="https://sanjayp.is.umbc.edu/">Sanjay Purushotham</a></h4>
+                    <p class="text-muted">University of Maryland, Baltimore County</p>
+                </div>
+            </div>
+            <div class="col-sm-2">
                 &nbsp;
             </div>
 
             <div class="col-sm-2">
                 <div class="team-member">
-                    <img src="img/sanjay.png" class="img-responsive img-circle" alt="">
-                    <h4><a href="https://sanjayp.is.umbc.edu/">Sanjay Purushotham</a></h4>
-                    <p class="text-muted">University of Maryland, Baltimore County</p>
+                    <img src="img/roseyu.jpg" class="img-responsive img-circle" alt="">
+                    <h4><a href="http://roseyu.com/">Qi (Rose) Yu</a></h4>
+                    <p class="text-muted">University of California, San Diego</p>
                 </div>
             </div>
 
