--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -275,8 +275,7 @@
                     <!--<b>Paper Submission Deadline:</b> <strike class="text-muted">TBD</strike>-->
                     <!--</p>-->
                     <p class="large text-muted">
-                        <b>Paper Submission Deadline: May 20th, 2020, 11:59PM Alofi
-                            Time </b>
+                        <b>Paper Submission Deadline: June 10th, 2020, 11:59PM Alofi Time </b>
                     </p>
                     <p class="large text-muted">
                         <b>Author Notification:</b> <span>June 15th, 2020</span>
