--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -278,10 +278,10 @@
                         <b>Paper Submission Deadline: June 10th, 2020, 11:59PM Alofi Time </b>
                     </p>
                     <p class="large text-muted">
-                        <b>Author Notification:</b> <span>June 15th, 2020</span>
+                        <b>Author Notification:</b> <span>July 1st, 2020</span>
                     </p>
                     <p class="large text-muted">
-                        <b>Camera Ready Version:</b> July 2nd, 2020
+                        <b>Camera Ready Version:</b> July 15th, 2020
                     </p>
                     <p class="large text-muted">
                         <b>Workshop:</b> August 24th, 2020
