--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -390,6 +390,36 @@
 </section>
 
 
+<section id="program_committee">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Program Committee</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-8">
+                <ul class="large">
+                    <li>Zhengping Che, Didi Chuxing</li>
+                    <li>Jing Dai, Google</li>
+                    <li>Abhishek Mukherji, Cisco Systems</li>
+                    <li>Sungyong Seo, University of Southern California </li>
+                    <li>Xingjian Shi, Amazon Web Sevices</li>
+                    <li>Zheng Wang, Didi Chuxing</li>
+                    <li>Qingsong Wen, Alibaba DAMO Academy</li>
+                    <li>Michael Yeh, Visa Research</li>
+                    <li>Jiayu Zhou, Michigan State University</li>
+                </ul>
+            </div>
+            <div class="col"></div>
+        </div>
+        
+    </div>
+</section>
+
+
 <!-- jQuery -->
 <script src="js/jquery.js"></script>
 
