Update PC members.

--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -83,6 +83,9 @@
                     <a class="page-scroll" href="#organization">Organizers</a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="#program_committee">PC</a>
+                </li>
+                <li>
                     <a href="https://milets19.github.io" target="_blank">MiLeTS '19</a>
                 </li>
             </ul>
