--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -412,6 +412,7 @@
                     <li>Xingjian Shi, Amazon Web Sevices</li>
                     <li>Zheng Wang, Didi Chuxing</li>
                     <li>Qingsong Wen, Alibaba DAMO Academy</li>
+                    <li>Scott Yang, New York University</li>
                     <li>Michael Yeh, Visa Research</li>
                     <li>Jiayu Zhou, Michigan State University</li>
                 </ul>
