--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
           content="MiLeTs 2020, 6th SIGKDD Workshop on Mining and Learning from Time Series (MiLeTS), co-located with KDD 2020, San Diego, United States">
+    <meta property="og:image" content="img/thumbnail.jpg">
 
 
     <title>The 6th Mining and Learning from Time Series Workshop</title>
