--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -9,7 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
           content="MiLeTs 2020, 6th SIGKDD Workshop on Mining and Learning from Time Series (MiLeTS), co-located with KDD 2020, San Diego, United States">
-    <meta property="og:image" content="img/thumbnail.jpg">
+    <meta property="og:image" content="https://kdd-milets.github.io/milets2020/img/thumbnail.jpg">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="The 6th Mining and Learning from Time Series Workshop">
+    <meta property="og:description" content="MiLeTs 2020, 6th SIGKDD Workshop on Mining and Learning from Time Series (MiLeTS)">
 
 
     <title>The 6th Mining and Learning from Time Series Workshop</title>
