--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -11,8 +11,8 @@
           content="MiLeTs 2020, 6th SIGKDD Workshop on Mining and Learning from Time Series (MiLeTS), co-located with KDD 2020, San Diego, United States">
     <meta property="og:image" content="https://kdd-milets.github.io/milets2020/img/thumbnail.jpg">
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="The 6th Mining and Learning from Time Series Workshop">
-    <meta property="og:description" content="MiLeTs 2020, 6th SIGKDD Workshop on Mining and Learning from Time Series (MiLeTS)">
+    <meta property="og:title" content="The 6th SIGKDD Mining and Learning from Time Series Workshop">
+    <meta property="og:description" content="6th SIGKDD Workshop on Mining and Learning from Time Series (MiLeTS)">
 
 
     <title>The 6th Mining and Learning from Time Series Workshop</title>
