Updates key dates.

--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -369,13 +369,13 @@
                     <!--<b>Paper Submission Deadline:</b> <strike class="text-muted">TBD</strike>-->
                     <!--</p>-->
                     <p class="large text-muted">
-                        <b>Paper Submission Deadline: June 10th, 2020, 11:59PM Alofi Time </b>
+                        <b>Paper Submission Deadline:</b> <span style="text-decoration: line-through;" class="text-muted">June 10th</span> June 20th, 2020, 11:59PM Alofi Time 
                     </p>
                     <p class="large text-muted">
-                        <b>Author Notification:</b> <span>July 1st, 2020</span>
+                        <b>Author Notification:</b> <span>July 10th, 2020</span>
                     </p>
                     <p class="large text-muted">
-                        <b>Camera Ready Version:</b> July 15th, 2020
+                        <b>Camera Ready Version:</b> July 25th, 2020
                     </p>
                     <p class="large text-muted">
                         <b>Workshop:</b> August 24th, 2020
