Update keynote speakers.

--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -278,6 +278,39 @@
                 </p>
             </div>
         </div>
+
+         <!-- Lukasz Kaiser -->
+         <div class="row speakers">
+            <div class="col-sm-4">
+                <div class="team-member">
+                    <a href="https://research.google/people/LukaszKaiser/" target="_blank">
+                        <img src="img/lukasz_kaiser.png" style="height: 240px; width:240px;"
+                             class="img-responsive img-circle"
+                             alt="Łukasz Kaiser">
+                    </a>
+                    <h4><a href="https://research.google/people/LukaszKaiser//" target="_blank">Łukasz Kaiser</a></h4>
+                    <p class="text-muted"> Staff Research Scientist<br/>Google Brain</p>
+
+                </div>
+            </div>
+
+            <div class="col-sm-8 text-justify">
+                </p>
+                    <br>
+                    <b>Bio</b><br>
+                    Dr. Łukasz Kaiser is a staff research scientist at Google Brain team who built the TensorFlow machine learning system.
+                    He is working on machine learning using neural networks, and he demonstrated that neural networks can learn complex discrete algorithms, such as long multiplication, just from
+                    examples. He also worked on natural language processing and constructed
+                    state-of-the-art NLP systems for many tasks including translation and summarization.
+
+                    Before joining Google, Dr. Łukasz Kaiser was a tenured researcher in Paris working on
+                    logic and automata theory. He used satisfiability solvers and other symbolic
+                    methods to build game playing systems and for program synthesis. In his
+                    theoretical work, he proved theorems on descriptive complexity, game theory
+                    and automata that resolved long-standing open problems.
+                </p>
+            </div>
+        </div>
         
          <!-- Mihaela van der Schaar -->
          <div class="row speakers">
@@ -339,11 +372,11 @@
 
    
 
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-lg-12 text-center">
                 <h3 class="section-subheading text-muted">More keynote speakers will be announced ...</h3>
             </div>
-        </div>
+        </div> -->
 
 
     </div>
@@ -497,6 +530,7 @@
             <div class="col-lg-8">
                 <ul class="large">
                     <li>Zhengping Che, Didi Chuxing</li>
+                    <li>Dehua Cheng, Facebook AI </li>
                     <li>Jing Dai, Google</li>
                     <li>Abhishek Mukherji, Cisco Systems</li>
                     <li>Sungyong Seo, University of Southern California </li>
