Update keynote speakers.

--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -289,7 +289,7 @@
                              alt="Łukasz Kaiser">
                     </a>
                     <h4><a href="https://research.google/people/LukaszKaiser//" target="_blank">Łukasz Kaiser</a></h4>
-                    <p class="text-muted"> Staff Research Scientist<br/>Google Brain</p>
+                    <p class="text-muted"> Staff Research Scientist<br/>Google Brain & CNRS</p>
 
                 </div>
             </div>
