Update keynote speakers.

--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -363,8 +363,22 @@
                 </p>
                     <br>
                     <b>Bio</b><br>
-                    Dr. Nikunj C. Oza received his B.S. in Mathematics with Computer Science
-                    from the Massachusetts Institute of Technology (MIT) in 1994. He received his M.S. (in 1998) and Ph.D. (in 2001) in Computer Science from the University of California at Berkeley. He then joined NASA Ames Research Center and is a member of their Intelligent Data Understanding (IDU) group. He leads of a team applying data mining to the problem of health management for aerospace vehicles. His 40+ research papers represent his research interests which include machine learning (especially ensemble learning and online learning), data mining, fault detection, integration of machine learning with automated planning and other areas of Artificial Intelligence, and their applications to Aeronautics and Earth Science. He received the 2007 Arch T. Colwell Award in 2007 for co-authoring one of the five most innovative technical papers selected out of over 3300 SAE technical papers published in 2005.
+                    Dr. Nikunj Oza is the leader of the Data Sciences Group at NASA Ames Research Center. He
+                    also leads a NASA project team, which applies machine learning to aviation safety and
+                    operations problems. Dr. Oza’s 50+ research papers represent his research interests,
+                    which include data mining, machine learning, ensemble learning, anomaly detection,
+                    and their applications to Aeronautics and Earth Science. He received the Arch T. Colwell
+                    Award for co-authoring one of the five most innovative technical papers selected from
+                    3300+ SAE technical papers in 2005. His data mining team received the 2018 and 2019
+                    NASA Honor Awards and the 2010 NASA Aeronautics Research Mission Directorate
+                    Associate Administrator¹s Award. In 2019, he was named by Cognilytica as one of 50 key
+                    people in the US government working to move the adoption of AI forward across the
+                    industry. He is an Associate Editor for the peer-reviewed journal Information Fusion
+                    (Elsevier) and has served as organizer, senior program committee member, and
+                    program committee member of several data mining and machine learning conferences.
+                    He received his B.S. in Mathematics with Computer Science from MIT in 1994, and M.S.
+                    (in 1998) and Ph.D. (in 2001) in Computer Science from the University of California at
+                    Berkeley.
                 </p>
             </div>
         </div>
