Updates PC member and notification date.

--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -419,7 +419,7 @@
                         <b>Paper Submission Deadline:</b> <span style="text-decoration: line-through;" class="text-muted">June 10th</span> June 20th, 2020, 11:59PM Alofi Time 
                     </p>
                     <p class="large text-muted">
-                        <b>Author Notification:</b> <span>July 10th, 2020</span>
+                        <b>Author Notification:</b> <span>July 13th, 2020</span>
                     </p>
                     <p class="large text-muted">
                         <b>Camera Ready Version:</b> July 25th, 2020
@@ -549,6 +549,7 @@
                     <li>Abhishek Mukherji, Cisco Systems</li>
                     <li>Sungyong Seo, University of Southern California </li>
                     <li>Xingjian Shi, Amazon Web Sevices</li>
+                    <li>Michael Tsang, University of Southern California</li>
                     <li>Zheng Wang, Didi Chuxing</li>
                     <li>Qingsong Wen, Alibaba DAMO Academy</li>
                     <li>Bin Yang, Aalborg University</li>
