--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -422,7 +422,10 @@
                         <b>Author Notification:</b> <span>July 13th, 2020</span>
                     </p>
                     <p class="large text-muted">
-                        <b>Camera Ready Version:</b> July 25th, 2020
+                        <b>Camera Ready Version:</b> July 27th, 2020
+                    </p>
+                    <p class="large text-muted">
+                        <b>Video Submission:</b> July 30th, 2020
                     </p>
                     <p class="large text-muted">
                         <b>Workshop:</b> August 24th, 2020
