Adds accepted papers.

--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -398,6 +398,170 @@
 
 </section>
 
+
+
+<!-- Accepted Papers Section -->
+<section id="papers" class="bg-mid-gray">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Accepted Papers</h2>
+                <!--h3 class="section-heading">TBA</h3> -->
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-1 text-justify">
+                &nbsp;
+            </div>
+            <div class="col-lg-10 text-justify">
+                                
+                <p class="row large text-muted">
+                    <a href="#" target="_blank">
+                    The Effectiveness of Discretization in Forecasting: An Empirical Study on Neural Time Series Models
+                    </a>
+                    Stephan Rabanser, Tim Januschowski, Valentin Flunkert, David Salinas and Jan Gasthaus
+                </p>
+
+                <p class="row large text-muted">
+                    <a href="#" target="_blank">
+                    Driver2vec: Driver Identification from Automotive Data
+                    </a>
+                    Jingbo Yang, Ruge Zhao, Meixian Zhu, Jaka Sodnik, David Hallac and Jure Leskovec
+                </p>
+
+                <p class="row large text-muted">
+                    <a href="#" target="_blank">
+                    Improving Robustness on Seasonality-Heavy Multivariate Time Series Anomaly Detection
+                    </a>
+                    Farzaneh Khoshnevisan, Zhewen Fan and Vitor Carvalho
+                </p>
+
+                <p class="row large text-muted">
+                    <a href="#" target="_blank">
+                    Detection of Environment Transitions in Time Series Data for Responsive Science
+                    </a>
+                    Ameya Daigavane, Kiri Wagstaff, Gary Doran, Corey Cochrane, Caitriona Jackman and Abigail Rymer
+                </p>
+
+                <p class="row large text-muted">
+                    <a href="#" target="_blank">
+                    Instance Explainable Temporal Network For Multivariate Timeseries
+                    </a>
+                    Naveen Madiraju and Homa Karimabadi
+                </p>
+            </div>
+            <div class="col-lg-1 text-justify">
+                &nbsp;
+            </div>
+
+        </div>
+
+    </div>
+</section>
+
+
+<section id="posters" class="bg-mid-gray">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Accepted Posters</h2>
+                <!-- <h3 class="section-heading">TBA</h3> -->
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-1 text-justify">
+                &nbsp;
+            </div>
+            <div class="col-lg-10 text-justify">
+            
+                <p class="row large text-muted">
+                    <a href="#" target="_blank">
+                    Modality Selection for Classification on Time-series Data
+                    </a>
+                    Murchana Baruah and Bonny Banerjee
+                </p>
+
+                <p class="row large text-muted">
+                    <a href="#" target="_blank">
+                    Machine Learning Methods for Predictive Maintenance of Multifunctional Printers
+                    </a>
+                    Wojciech Indyk, Zuzana Neverilova and Jakub Valcik
+                </p>
+
+                <p class="row large text-muted">
+                    <a href="#" target="_blank">
+                    Towards Deep Unsupervised Representation Learning from Accelerometer Time Series for Animal Activity Recognition
+                    </a>
+                    Jacob Kamminga, Viet Duc Le, Nirvana Meratnia and Paul Havinga
+                </p>
+
+                <p class="row large text-muted">
+                    <a href="#" target="_blank">
+                    Statistical Evaluation of Anomaly Detectors for Sequences
+                    </a>
+                    Erik Scharwächter and Emmanuel Müller
+                </p>
+
+                <p class="row large text-muted">
+                    <a href="#" target="_blank">
+                    A framework for incorporating  data acquisition cost in predictive time series models
+                    </a>
+                    Adrian Stetco, Razvan Mosincat, Goran Nenadic and John Keane
+                </p>
+
+                <p class="row large text-muted">
+                    <a href="#" target="_blank">
+                    PastProp-RNN: improved predictions of the future by correcting the past
+                    </a>
+                    André Baptista, Yassine Baghoussi, Carlos Soares, Miguel Arantes and João Mendes-Moreira
+                </p>
+
+                <p class="row large text-muted">
+                    <a href="#" target="_blank">
+                    RobustTAD: Robust Time Series Anomaly Detection via Decomposition and Convolutional Neural Networks
+                    </a>
+                    Jingkun Gao, Xiaomin Song, Qingsong Wen, Pichao Wang, Liang Sun and Huan Xu
+                </p>
+
+                <p class="row large text-muted">
+                    <a href="#" target="_blank">
+                    Forecasting Hierarchical Time Series with a Regularized Embedding Space
+                    </a>
+                    Jeffrey Gleason
+                </p>
+
+                <p class="row large text-muted">
+                    <a href="#" target="_blank">
+                    Towards Automating Time Series Analysis for Paleogeosciences
+                    </a>
+                    Deborah Khider, Pratheek Athreya, Varun Ratnakar, Yolanda Gil, Feng Zhu, Myron Kwan and Julien Emile-Geay
+                </p>
+
+                <p class="row large text-muted">
+                    <a href="#" target="_blank">
+                    Interpreting Deep Temporal Neural Networks by Selective Visualization of Internally Activated Nodes
+                    </a>
+                    Sohee Cho, Wonjoon Chang, Ginkyeng Lee and Jaesik Choi
+                </p>
+
+                ​
+
+                <!-- End Poster List -->
+
+            </div>
+            <div class="col-lg-1 text-justify">
+                &nbsp;
+            </div>
+
+        </div>
+    </div>
+
+</section>
+
 <!-- Dates Section -->
 <section id="dates" class="bg-mid-gray">
     <div class="container">
