Update bio and abstract.

--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -296,18 +296,32 @@
 
             <div class="col-sm-8 text-justify">
                 </p>
+                <h3>Reformer: The Efficient Transformer   </h3>
+                    <p>
+                    </p>
+                    Transformer models have been used in a variety of fields and
+                    yield great results on many NLP tasks. But between the BERT,
+                    GPT-2, and many other variants, they can be inefficient and it
+                    can be hard to apply them. I will introduce a new efficient variant
+                    of Transformer called the Reformer. I'll take you through the code
+                    that implements it and I will show how it runs at high efficiency and
+                    addresses the main problems or high memory use and low performance
+                    on long sequences that limited the use of some Transformers before.
+                    I will finish with new applications of Reformer that open up.
+                       <br>
                     <br>
                     <b>Bio</b><br>
-                    Dr. Łukasz Kaiser is a staff research scientist at Google Brain team who built the TensorFlow machine learning system.
-                    He is working on machine learning using neural networks, and he demonstrated that neural networks can learn complex discrete algorithms, such as long multiplication, just from
-                    examples. He also worked on natural language processing and constructed
-                    state-of-the-art NLP systems for many tasks including translation and summarization.
-
-                    Before joining Google, Dr. Łukasz Kaiser was a tenured researcher in Paris working on
-                    logic and automata theory. He used satisfiability solvers and other symbolic
-                    methods to build game playing systems and for program synthesis. In his
-                    theoretical work, he proved theorems on descriptive complexity, game theory
-                    and automata that resolved long-standing open problems.
+                    Dr. Łukasz Kaiser joined Google in 2013 and is currently a staff Research
+                    Scientist in the Google Brain Team in Mountain View, where he
+                    works on fundamental aspects of deep learning and natural
+                    language processing. He has co-designed state-of-the-art
+                    neural models for machine translation, parsing and other
+                    algorithmic and generative tasks and co-authored the TensorFlow
+                    system, the Tensor2Tensor and Trax libraries and the Transformer
+                    model. Before joining Google, Lukasz was a tenured researcher
+                    at University Paris Diderot and worked on logic and
+                    automata theory. He received his PhD from RWTH Aachen
+                    University in 2008 and his MSc from the University of Wroclaw, Poland. 
                 </p>
             </div>
         </div>
