--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -284,11 +284,11 @@
             <div class="col-sm-4">
                 <div class="team-member">
                     <a href="https://research.google/people/LukaszKaiser/" target="_blank">
-                        <img src="img/lukasz_kaiser.png" style="height: 240px; width:240px;"
+                        <img src="img/lukasz_kaiser.jpg" style="height: 240px; width:240px;"
                              class="img-responsive img-circle"
                              alt="Łukasz Kaiser">
                     </a>
-                    <h4><a href="https://research.google/people/LukaszKaiser//" target="_blank">Łukasz Kaiser</a></h4>
+                    <h4><a href="https://research.google/people/LukaszKaiser/" target="_blank">Łukasz Kaiser</a></h4>
                     <p class="text-muted"> Staff Research Scientist<br/>Google Brain & CNRS</p>
 
                 </div>
