Updates program schedule.

--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -205,6 +205,54 @@
         </div>
     </section>
 
+    <!-- Program Section -->
+    <section id="program" class="bg-mid-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Schedule</h2>
+                    <h3 class="section-subheading text-muted">
+                        8:00 AM - 5:00 PM, August 24th, 2020<br>
+                    </h3>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="col-lg-1 text-left">
+                    &nbsp;
+                </div>
+                <div class="col-lg-10 text-left ">
+                    <h3>MORNING SESSION</h3>
+                    <p>08:00-08:10 Opening remarks</p>
+                    <p>08:10-09:10 Keynote Talk, Dr. Mihaela van der Schaar</p>
+                    <p>09:15-10:15 Keynote Talk</p>
+                    <ul>
+                        <li><strong>Think Globally, Act Locally: A Deep Neural Network Approach to High-Dimensional Time Series Forecasting</strong>, <em>Dr. Inderjit S. Dhillon</em></li>
+                    </ul>
+                    <p>10:15-10:45 Coffee Break</p>
+                    <p>10:45-12:00 Contributed Talks</p>
+                    <p>12:00-13:00 Lunch Break</p>
+
+                    <h3>AFTERNOON SESSION</h3>
+                    <p>13:00-14:00 Keynote Talk</p>
+                    <ul>
+                        <li><strong>The Efficient Transformer </strong>, <em>Dr. Łukasz Kaiser</em></li>
+                    </ul>
+                    <p>14:00-14:30 Poster Highlights</p>
+                    <p>14:30-15:00 Coffee Break</p>
+                    <p>15:00-16:00 Keynote Talk, Dr. Nikunj Oza</p>
+                    <p>16:00-16:45 Poster Session</p>
+                    <p>16:45-17:00 Concluding Remarks</p>
+                </div>
+
+                <div class="col-lg-1 text-left">
+                    &nbsp;
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Keynote Section -->
 
     <section id="keynote">
