--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -78,6 +78,9 @@
                         <a class="page-scroll" href="#call">CFP</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#program">Program</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#dates">Dates</a>
                     </li>
                     <li>
