--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -228,7 +228,10 @@
                 <div class="col-lg-10 text-left ">
                     <h3>MORNING SESSION</h3>
                     <p>08:00-08:10 Opening remarks</p>
-                    <p>08:10-09:10 Keynote Talk, Dr. Mihaela van der Schaar</p>
+                    <p>08:10-09:10 Keynote Talk</p>
+                    <ul>
+                        <li><strong>Machine Learning for healthcare in the COVID-19 Era</strong>, <em>Dr. Mihaela van der Schaarer</em></li>
+                    </ul>
                     <p>09:15-10:15 Keynote Talk</p>
                     <ul>
                         <li><strong>Think Globally, Act Locally: A Deep Neural Network Approach to High-Dimensional Time Series Forecasting</strong>, <em>Dr. Inderjit S. Dhillon</em></li>
@@ -347,6 +350,7 @@
 
                 <div class="col-sm-8 text-justify">
                     </p>
+                    <h3>Machine Learning for Healthcare in the COVID-19 Era </h3>
                     <br>
                     <b>Bio</b><br> Dr. Mihaela van der Schaar is the John Humphrey Plummer Professor of Machine Learning, Artificial Intelligence and Medicine at the University of Cambridge, a Fellow at The Alan Turing Institute in London, and a Chancellor’s
                     Professor at UCLA. Mihaela was elected IEEE Fellow in 2009. She has received numerous awards, including the Oon Prize on Preventative Medicine from the University of Cambridge (2018), a National Science Foundation CAREER Award (2004),
